k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress
  namespace: mern
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gulamgaush.in
      secretName: tls
  rules:
    - host: gulamgaush.in
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
